src/components/Sidebar/sidebar.module.scss
.sidebar {
   --sidebar-padding: 1rem;

   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   display: flex;
   flex-direction: column;
   width: var(--sidebar-size);
   background: var(--sidebar-bgr);
   transition: all 0.5s ease-in-out;

   // Tablet 768px - 1024px
   @media screen and (max-width: 64rem) {
      position: fixed;
   }

   // Mobile < 768px
   @media screen and (max-width: 48rem) {
      left: calc(-1 * var(--sidebar-size));
      right: 0;
      max-width: var(--sidebar-size);
      width: 80%;
      opacity: 0.5;
      transition: all 0.4s ease;

      z-index: 1;
      &.active {
         left: 0;
         opacity: 1;
      }
   }
}

.closeBtn {
   display: none;
   position: absolute;
   top: 1rem;
   right: 0;
   width: 3rem;
   height: 3rem;
   font-size: 1.3rem;
   background: none;
   border: none;
   color: var(--app-text1);

   // Mobile < 768px
   @media screen and (max-width: 48rem) {
      display: block;
   }
}

.title {
   display: none;
   padding: 1rem var(--sidebar-padding);
   min-height: 5rem;
   width: 90%;
   line-height: 3rem;
   font-size: 1.6rem;
   font-weight: 800;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;

   // Mobile < 768px
   @media screen and (max-width: 48rem) {
      display: block;
   }
}

// Body
.sidebarBody {
   --avatar-size: 2.3rem;

   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   min-height: 100%;
   padding: var(--sidebar-padding);
   padding-top: 2rem;
   padding-bottom: calc(var(--avatar-size) + 2.5 * var(--sidebar-padding));
   overflow-y: scroll;

   // Mobile < 768px
   @media screen and (max-width: 48rem) {
      padding-top: var(--sidebar-padding);
      padding-bottom: calc(var(--avatar-size) + 2.5 * var(--sidebar-padding) + 5rem);
   }
}

.label {
   display: block;
   font-size: 1rem;

   transition: all 0.5s ease-in-out;
}

// Select Models
.selectModel {
   position: relative;
   display: block;
   max-width: calc(var(--sidebar-size) - var(--sidebar-padding));
   width: 100%;
   font-size: 1rem;
   border-radius: 0.4rem;
   padding: 0.8rem 0.5rem;
   background: var(--app-text1);
   color: var(--app-text2);
   cursor: pointer;

   transition: all 0.5s ease-in-out;
}

.showOptionBtn {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
   top: 50%;
   right: 0.4rem;
   transform: translateY(-50%);
   width: 1rem;
   background: none;
   color: var(--app-text2);

   & i {
      transition: all 0.3s ease-in-out;
   }

   &.show i {
      transform: rotate(180deg);
   }
}

.optionWrap {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   border-radius: 0.5rem;

   background: var(--app-text1);
   z-index: 1;
   max-height: 0;
   height: 30rem;
   overflow: scroll;

   transition: all 0.3s ease-in-out;

   &.show {
      top: calc(100% + 0.5rem);
      max-height: 75vh;
   }
}

.optGroup {
   width: 100%;
   & > p {
      width: 100%;
      font-weight: bold;
      background: var(--app-text2);
      color: var(--app-text1);
      padding: 0.4rem 0 0.4rem 0.4em;
   }
}

.options {
   font-size: 0.9rem;
   padding: 0.2rem 0 0.2rem 1.2rem;
   transition: 0.2s ease-in;

   &:hover {
      background: var(--app-text2);
      color: var(--app-text1);
      cursor: pointer;
   }
}

.groupByWrap {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   max-width: calc(var(--sidebar-size) - var(--sidebar-padding));
   margin-bottom: 1.5rem;

   transition: all 0.5s ease-in-out;

   & i {
      font-size: 0.8rem;
      color: var(--app-btn-bgr);
      margin-right: 0.1rem;
   }

   & select {
      border-radius: 1rem;
      padding: 0 0.2rem;
      background: var(--app-text1);
      color: var(--app-text2);
   }
}

.selectGroupBy {
   position: relative;
   cursor: pointer;

   & > p {
      text-align: center;
      width: 4.2rem;
      font-size: 0.8rem;
      font-weight: bold;
      border-radius: 0.3rem;
      background: var(--app-text2);
      color: var(--app-text1);
   }
}

.groupByOptWrap {
   position: absolute;
   top: 200%;
   width: 100%;
   border-radius: 0.3rem;
   font-size: 0.8rem;
   background: var(--app-text1);
   color: var(--app-text2);
   overflow: hidden;
   max-height: 0;
   transition: all 0.2s ease-in-out;

   &.show {
      top: calc(100% + 0.2rem);
      max-height: 2.5rem;
   }
}

.groupByOpts {
   padding: 0.1rem 0 0.1rem 0.3rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   &:hover {
      background: var(--app-text2);
      color: var(--app-text1);
   }
}

// Max Tokens
.maxTokenWrap {
   --max-token-height: 2.5rem;
   --max-token-gap: 0.3rem;

   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: var(--max-token-gap);
   max-width: 100%;
   min-height: var(--max-token-height);
   border-radius: 0.2rem;
   overflow: hidden;
   margin-bottom: 1.5rem;

   transition: all 0.5s ease-in-out;
}

.maxTokenInput {
   width: calc(100% - 2 * var(--max-token-height) - 2 * var(--max-token-gap));
   height: 100%;
   font-size: 1.1rem;
   padding: 0 0.5rem;
   border: none;
   outline: none;
   text-align: center;
   color: var(--app-text2);
   background: var(--app-text1);

   &::-webkit-inner-spin-button,
   &::-webkit-outer-spin-button {
      appearance: none;
      -webkit-appearance: none;
      margin: 0;
   }
}

.maxTokenBtn {
   background: var(--app-btn-bgr);
   height: var(--max-token-height);
   width: var(--max-token-height);
   color: var(--app-text1);
}

// Temperature
.temperatureWrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
   width: 14rem;
   margin-bottom: 1.5rem;

   transition: all 0.5s ease-in-out;

   &.mode0 {
      animation: hideFloatLeft 0.5s ease-in-out 0.5s;
   }

   &.mode1 {
      animation: showFloatRight 0.5s ease-in-out 1.1s;
   }
}

.temperatureInput {
   width: 100%;
   height: 0.6rem;
   -webkit-appearance: none;
   appearance: none;
   outline: none;
   border-radius: 1rem;
   background: var(--app-text1);
   cursor: pointer;

   &::-webkit-slider-thumb {
      -webkit-appearance: none;
      appearance: none;
      width: 1rem;
      height: 1rem;
      border-radius: 50%;
      background: var(--app-btn-bgr);
   }
}

.temperature {
   font-size: 1.1rem;
   text-align: right;
   width: 2.5rem;
}

// Amount
.amountWrap {
   --amount-height: 2.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 0.3rem;
   max-width: 100%;
   height: var(--amount-height);
   color: var(--app-text2);
   margin-bottom: 1.5rem;
   border-radius: 0.2rem;
   overflow: hidden;
   font-size: 1.1rem;

   transition: all 0.5s ease-in-out;
}

.amountValue {
   background: var(--app-text1);
   height: var(--amount-height);
   line-height: var(--amount-height);
   text-align: center;
   flex: 1;
}

.amountBtn {
   background: var(--app-btn-bgr);
   height: var(--amount-height);
   width: var(--amount-height);
   color: var(--app-text1);
}

.buttonWrap {
   display: flex;
   justify-content: flex-end;
   align-items: center;

   transition: all 0.4s ease-in-out;
}

.sidebarBtn {
   position: relative;
   display: inline-block;
   align-self: center;
   height: 2rem;
   color: var(--app-text1);
   background: none;
   padding: 0 0.5rem;
   border-radius: 0.4rem;

   transition: all 0.4s ease-in-out;

   & > img {
      width: 1.5rem;
   }

   &.reset {
      width: 3.2rem;
   }

   &.save {
      width: 2.9rem;
      &.active {
         background: var(--app-btn-bgr);
         animation: wave 0.5s linear infinite;
      }
   }

   &:not(.loading):after {
      content: '';
      position: absolute;
      bottom: 0.5rem;
      left: 50%;
      transform: translateX(-50%);
      width: 0rem;
      height: 0.1rem;
      background: var(--app-text1);
      transition: all 0.2s ease-in;
   }

   &:hover:after {
      width: 70%;
   }
}

@keyframes wave {
   0% {
      transform: rotate(-2deg);
   }
   50% {
      transform: rotate(2deg);
   }
   100% {
      transform: rotate(-2deg);
   }
}

